@@ -44,23 +44,38 @@ public class TestQueryNode extends LuceneTestCase {
     assertTrue(node.getTag("tAg") != null);
     
   }
-  
+
+
   /* LUCENE-5099 - QueryNodeProcessorImpl should set parent to null before returning on processing */
   public void testRemoveFromParent() throws Exception {
     BooleanQueryNode booleanNode = new BooleanQueryNode(Collections.<QueryNode>emptyList());
     FieldQueryNode fieldNode = new FieldQueryNode("foo", "A", 0, 1);
     assertNull(fieldNode.getParent());
-    
+
     booleanNode.add(fieldNode);
     assertNotNull(fieldNode.getParent());
 
     fieldNode.removeFromParent();
     assertNull(fieldNode.getParent());
+    /* LUCENE-5805 - QueryNodeImpl.removeFromParent does a lot of work without any effect */
+    assertFalse(booleanNode.getChildren().contains(fieldNode));
 
     booleanNode.add(fieldNode);
     assertNotNull(fieldNode.getParent());
-    
+
     booleanNode.set(Collections.<QueryNode>emptyList());
+    assertNull(fieldNode.getParent());
+  }
+
+  public void testRemoveChildren() throws Exception{
+    BooleanQueryNode booleanNode = new BooleanQueryNode(Collections.<QueryNode>emptyList());
+    FieldQueryNode fieldNode = new FieldQueryNode("foo", "A", 0, 1);
+
+    booleanNode.add(fieldNode);
+    assertTrue(booleanNode.getChildren().size() == 1);
+
+    booleanNode.removeChildren(fieldNode);
+    assertTrue(booleanNode.getChildren().size()==0);
     assertNull(fieldNode.getParent());
   }
   
